getting all adverts added